--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ #notice {
+   color: orange;
+   font-family: Indie flower;
+   font-size: 20px;
+ }
