--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,10 @@
    font-family: Indie flower;
    font-size: 20px;
  }
+
+ #error_explanation {
+   color: orange;
+   font-family: Indie flower;
+   font-size: 20px;
+   background-color: blue;
+ }
